--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>React-manual-import</title>
+		<title>React Manual Import</title>
 		<link rel="icon" href="img/favicon.svg" type="image/svg+xml">
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/index.css">
 	</head>
 	<body>
-		<script src="js/index.js"></script>
+
+		<main id="greeting"></main>
+
+		<!-- Load up Babel, React, and React DOM from CDN links -->
+		<script crossorigin src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+		<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+		<script src="js/index.js" type="text/babel"></script>
 	</body>
 </html>
